[gd_scene format=3 uid="uid://c6n1eawwhd4pg"]

[ext_resource type="Texture2D" uid="uid://cwoaf74ruto42" path="res://assets/gui/stanza.png" id="1_05tv3"]
[ext_resource type="Script" uid="uid://dbvfowue1igej" path="res://scripts/scenes/MainTitle.gd" id="1_ii6vm"]
[ext_resource type="FontFile" uid="uid://rawcgf4dtb73" path="res://assets/font/Google_Sans/GoogleSans-Italic-VariableFont_GRAD,opsz,wght.ttf" id="3_ija45"]
[ext_resource type="Texture2D" uid="uid://dhs354aql4s4m" path="res://assets/gui/Guglielmo_GUI_Iniziale.png" id="4_3hp52"]
[ext_resource type="Texture2D" uid="uid://ctuj7fkyctfxh" path="res://assets/gui/Else_GUI_Iniziale.png" id="5_ll54c"]
[ext_resource type="Texture2D" uid="uid://bv434tutmmtca" path="res://assets/gui/Rosy_GUI_Iniziale.png" id="6_fp7vw"]
[ext_resource type="Texture2D" uid="uid://cae2v7dyhuc6g" path="res://scripts/gui/black rectangle.png" id="7_3hp52"]
[ext_resource type="Texture2D" uid="uid://c40ic5v80xvvk" path="res://assets/gui/SpeechBubble.png" id="8_ll54c"]
[ext_resource type="FontFile" uid="uid://b104jksnsww2p" path="res://assets/font/Google_Sans/static/GoogleSans-Regular.ttf" id="9_not4n"]
[ext_resource type="FontFile" uid="uid://c2gvdf331qn7d" path="res://assets/font/Google_Sans/static/GoogleSans-Bold.ttf" id="10_hcoy4"]
[ext_resource type="FontFile" uid="uid://d2q4227l718a5" path="res://assets/font/Google_Sans/static/GoogleSans-BoldItalic.ttf" id="11_yvqej"]
[ext_resource type="FontFile" uid="uid://den1a0eh0isal" path="res://assets/font/Google_Sans/static/GoogleSans-Italic.ttf" id="12_pesqw"]
[ext_resource type="Texture2D" uid="uid://c41yfnroc3eh7" path="res://assets/gui/play_button.png" id="13_hcoy4"]
[ext_resource type="AudioStream" uid="uid://dw07pvsji4kqs" path="res://sounds/music/intro_marimba.wav" id="14_yvqej"]
[ext_resource type="Texture2D" uid="uid://c4j3vmv08vcek" path="res://assets/gui/exit_game_off.png" id="15_pesqw"]

[node name="Control" type="Control" unique_id=952706856]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ii6vm")

[node name="Sfondo" type="TextureRect" parent="." unique_id=1254689822]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_05tv3")

[node name="RichTextLabel" type="RichTextLabel" parent="." unique_id=838155356]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 100.0
offset_top = 595.0
offset_right = -120.0
offset_bottom = -185.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/default_color = Color(0.20784314, 0.13333334, 0.12156863, 1)
theme_override_fonts/bold_font = ExtResource("3_ija45")
theme_override_font_sizes/normal_font_size = 150
theme_override_font_sizes/bold_font_size = 150
text = "Y's Boutique"
fit_content = true
scroll_active = false
horizontal_alignment = 1
vertical_alignment = 2

[node name="HBoxContainer" type="HBoxContainer" parent="." unique_id=1701487480]
layout_mode = 0
offset_left = 292.0
offset_top = 349.0
offset_right = 1670.0
offset_bottom = 649.0

[node name="Gioca" type="Button" parent="HBoxContainer" unique_id=291167988]
layout_mode = 2
size_flags_horizontal = 0
icon = ExtResource("4_3hp52")
flat = true

[node name="Gioca Title" type="RichTextLabel" parent="HBoxContainer/Gioca" unique_id=1708729582]
layout_mode = 1
anchors_preset = -1
anchor_top = -0.3
anchor_right = 0.9850001
anchor_bottom = -0.033
offset_right = -0.05001831
offset_bottom = 4.8999996
size_flags_horizontal = 3
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_fonts/bold_font = ExtResource("3_ija45")
theme_override_font_sizes/normal_font_size = 60
theme_override_font_sizes/bold_font_size = 30
text = "Start!"
horizontal_alignment = 1
vertical_alignment = 2

[node name="Gallery" type="Button" parent="HBoxContainer" unique_id=666080213]
layout_mode = 2
size_flags_horizontal = 6
icon = ExtResource("5_ll54c")
flat = true

[node name="Gallery Title" type="RichTextLabel" parent="HBoxContainer/Gallery" unique_id=1230865866]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.003
anchor_top = -0.3
anchor_right = 1.0
anchor_bottom = -0.033
offset_left = 0.00999999
offset_right = -4.0
offset_bottom = 4.8999996
size_flags_horizontal = 3
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_fonts/bold_font = ExtResource("3_ija45")
theme_override_font_sizes/normal_font_size = 60
theme_override_font_sizes/bold_font_size = 30
text = "Gallery"
horizontal_alignment = 1
vertical_alignment = 2

[node name="Settings" type="Button" parent="HBoxContainer" unique_id=2071720579]
layout_mode = 2
icon = ExtResource("6_fp7vw")
flat = true

[node name="Settings Title" type="RichTextLabel" parent="HBoxContainer/Settings" unique_id=834183410]
layout_mode = 1
anchors_preset = -1
anchor_top = -0.3
anchor_right = 1.0
anchor_bottom = -0.033
offset_left = -2.0
offset_right = -7.0
offset_bottom = 4.8999996
size_flags_horizontal = 3
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_fonts/bold_font = ExtResource("3_ija45")
theme_override_font_sizes/normal_font_size = 60
theme_override_font_sizes/bold_font_size = 30
text = "Settings"
horizontal_alignment = 1
vertical_alignment = 2

[node name="Focus" type="Control" parent="." unique_id=895009132]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Opacità" type="TextureRect" parent="Focus" unique_id=451013306]
modulate = Color(1, 1, 1, 0.627451)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 1880.0
offset_bottom = 1040.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("7_3hp52")

[node name="baloon" type="TextureRect" parent="Focus" unique_id=751103425]
custom_minimum_size = Vector2(1526, 1029)
layout_mode = 1
anchors_preset = -1
anchor_left = 24.150002
anchor_top = 13.137001
anchor_right = 24.150002
anchor_bottom = 13.137001
offset_left = -763.0
offset_top = -514.5
offset_right = 762.99994
offset_bottom = 514.49994
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("8_ll54c")

[node name="RichTextLabel" type="RichTextLabel" parent="Focus/baloon" unique_id=1210373811]
custom_minimum_size = Vector2(355, 405)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -399.5
offset_top = -224.50998
offset_right = 399.5
offset_bottom = 180.51996
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/default_color = Color(0.20784314, 0.13333334, 0.12156863, 1)
theme_override_fonts/normal_font = ExtResource("9_not4n")
theme_override_fonts/bold_font = ExtResource("10_hcoy4")
theme_override_fonts/bold_italics_font = ExtResource("11_yvqej")
theme_override_fonts/italics_font = ExtResource("12_pesqw")
theme_override_font_sizes/normal_font_size = 30
theme_override_font_sizes/bold_font_size = 30
theme_override_font_sizes/bold_italics_font_size = 30
theme_override_font_sizes/italics_font_size = 30
bbcode_enabled = true
text = "Caro [b]player[/b], da adesso in poi non ti chiameremo più così! Hai appena aperto la tua prestigiosa bottega da [b]costume planner[/b]: arriveranno dei clienti, ti chiederanno delle maschere ad hoc per le loro occasioni speciali. 

[i][b]Il tuo compito?[/b][/i] Renderli soddisfatti e creare una rete di clienti affezionati e ispirati a creare sempre nuove combinazioni per maschere mozzafiato!

[b]Iniziamo![/b] [i]Come ti chiami?[/i]"

[node name="Start" type="Button" parent="Focus/baloon" unique_id=765150695]
custom_minimum_size = Vector2(61, 61)
layout_mode = 1
anchors_preset = -1
anchor_left = 0.721
anchor_top = 0.71900004
anchor_right = 0.721
anchor_bottom = 0.71900004
grow_horizontal = 2
grow_vertical = 2
icon = ExtResource("13_hcoy4")
flat = true

[node name="namingb" type="TextEdit" parent="Focus/baloon" unique_id=1546476706]
custom_minimum_size = Vector2(650, 61)
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.72
anchor_right = 0.5
anchor_bottom = 0.72
offset_left = -397.5
offset_top = -30.5
offset_right = 252.5
offset_bottom = 30.5
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("9_not4n")
theme_override_font_sizes/font_size = 30
placeholder_text = "Inserisci qui il tuo nome"

[node name="Intro MainTitle" type="AudioStreamPlayer" parent="." unique_id=505706872]
stream = ExtResource("14_yvqej")
autoplay = true
mix_target = 1

[node name="ExitGame" type="Button" parent="." unique_id=2140954470]
custom_minimum_size = Vector2(290, 158)
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -290.0
offset_top = -158.0
grow_horizontal = 0
grow_vertical = 0
icon = ExtResource("15_pesqw")
flat = true
icon_alignment = 2
expand_icon = true

[node name="Label" type="Label" parent="ExitGame" unique_id=1521229008]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.503
anchor_right = 0.5
anchor_bottom = 0.503
offset_left = -90.0
offset_top = -36.474007
offset_right = 42.0
offset_bottom = 35.525993
theme_override_colors/font_color = Color(0.972549, 0.94509804, 0.87058824, 1)
theme_override_fonts/font = ExtResource("9_not4n")
theme_override_font_sizes/font_size = 26
text = "Exit Game"
vertical_alignment = 1

[connection signal="pressed" from="HBoxContainer/Gioca" to="." method="_on_gioca_button_pressed"]
[connection signal="pressed" from="HBoxContainer/Gallery" to="." method="_on_gallery_button_pressed"]
[connection signal="pressed" from="HBoxContainer/Settings" to="." method="_on_settings_button_pressed"]
[connection signal="pressed" from="Focus/baloon/Start" to="." method="on_start_button_pressed"]
[connection signal="pressed" from="ExitGame" to="." method="_on_exit_game_pressed"]
